--- a/src/.hidden/font-template.html
+++ b/src/.hidden/font-template.html
@@ -2,8 +2,7 @@
 
 <head>
     <title>
-        <!-- @echo name -->|
-        <%= fontName %> - Icon-Font Preview
+        <!-- @echo name --> | <%= fontName %> - Icon-Font Preview
     </title>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" />
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/paraiso-dark.min.css" />
